kubeconfig/01_deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remote-clp-job-dispatcher
  labels:
    app: remote-clp-job-dispatcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: remote-clp-job-dispatcher
  template:
    metadata:
      labels:
        app: remote-clp-job-dispatcher 
    spec:
      containers:
        - name: job-dispatcher
          image: registry.forge.hefr.ch/frederic.bapst/24-ps6-remote-clp/job_dispatcher:latest
          command: ["/app/wait-for-it.sh"]
          args: ["rabbitmq:5672", "-t", "600", "--", "/app/job_dispatcher"]
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: registry-secret

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: remote-clp-worker
  labels:
    app: remote-clp-worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: remote-clp-worker
  template:
    metadata:
      labels:
        app: remote-clp-worker
    spec:
      containers:
        - name: worker
          image: registry.forge.hefr.ch/frederic.bapst/24-ps6-remote-clp/worker:latest
          command: ["/wait-for-it.sh"]
          args: ["rabbitmq:5672", "-t", "600", "--", "python", "app.py"]
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: registry-secret

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-alpine
          ports:
            - containerPort: 5672
