kubeconfig/02_services.yml
apiVersion: v1
kind: Service
metadata:
  name: remote-clp-job-dispatcher
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
  selector:
    app: remote-clp-job-dispatcher 

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
  - port: 5672
    protocol: TCP
